# sundew_algorithms

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  README.md  Whitepaper.md  pyproject.toml  sundew_results.json  test_fix.py  test_work
.github/workflows/: ci.yml  publish-pypi.yml  publish-testpypi.yml  publish.yml
adapters/: ecg_adapter.py  run_ecg.py
benchmarks/: bench_energy.py  curve_threshold.py  eval_classification.py  grid_search.py  plot_best_tradeoffs.py  plot_grid.py  plot_real_run.py  plot_single_run.py  plot_sweep.py  rerun_from_row.py  run_ecg.py  run_presets.py  run_real.py  select_best.py  sweep_ecg.py  synthetic_stream.py
examples/: quickstart_demo.py
results/: best_by_counts.csv  best_by_counts.md  best_loose.csv  best_loose.md  curve_thr.csv  grid.csv  grid_aggressive.csv  grid_all.csv  grid_tuned.csv  real_ecg_best.json  real_ecg_ecg_v1_ref200.json  real_ecg_ecg_v1_ref200_T015_p014.json  real_ecg_run.json  sweep.csv  sweep_cm.csv
results/runs/: aggressive_seed42_20250901T184334Z.json  aggressive_seed43_20250901T184349Z.json  aggressive_seed44_20250901T184404Z.json  run_temp0.05_tgt0.15_seed42_20250901T172424Z.json  run_temp0.05_tgt0.15_seed42_20250901T180015Z.json  run_temp0.05_tgt0.15_seed43_20250901T172426Z.json  run_temp0.05_tgt0.15_seed43_20250901T180018Z.json  run_temp0.05_tgt0.15_seed44_20250901T172427Z.json  run_temp0.05_tgt0.15_seed44_20250901T180021Z.json  run_temp0.05_tgt0.25_seed42_20250901T172436Z.json  run_temp0.05_tgt0.25_seed42_20250901T180036Z.json  run_temp0.05_tgt0.25_seed43_20250901T172438Z.json  run_temp0.05_tgt0.25_seed43_20250901T180039Z.json  run_temp0.05_tgt0.25_seed44_20250901T172440Z.json  run_temp0.05_tgt0.25_seed44_20250901T180043Z.json  run_temp0.05_tgt0.2_seed42_20250901T172430Z.json  run_temp0.05_tgt0.2_seed42_20250901T180024Z.json  run_temp0.05_tgt0.2_seed43_20250901T172432Z.json  run_temp0.05_tgt0.2_seed43_20250901T180028Z.json  run_temp0.05_tgt0.2_seed44_20250901T172433Z.json  run_temp0.05_tgt0.2_seed44_20250901T180032Z.json  run_temp0.05_tgt0.3_seed42_20250901T172442Z.json  run_temp0.05_tgt0.3_seed42_20250901T180048Z.json  run_temp0.05_tgt0.3_seed43_20250901T172444Z.json  run_temp0.05_tgt0.3_seed43_20250901T180051Z.json  run_temp0.05_tgt0.3_seed44_20250901T172446Z.json  run_temp0.05_tgt0.3_seed44_20250901T180056Z.json  run_temp0.0_tgt0.15_seed42_20250901T172405Z.json  run_temp0.0_tgt0.15_seed42_20250901T175934Z.json  run_temp0.0_tgt0.15_seed43_20250901T172406Z.json  run_temp0.0_tgt0.15_seed43_20250901T175938Z.json  run_temp0.0_tgt0.15_seed44_20250901T172408Z.json  run_temp0.0_tgt0.15_seed44_20250901T175940Z.json  run_temp0.0_tgt0.25_seed42_20250901T172413Z.json  run_temp0.0_tgt0.25_seed42_20250901T175953Z.json  run_temp0.0_tgt0.25_seed43_20250901T172415Z.json  run_temp0.0_tgt0.25_seed43_20250901T175957Z.json  run_temp0.0_tgt0.25_seed44_20250901T172416Z.json  run_temp0.0_tgt0.25_seed44_20250901T180001Z.json  run_temp0.0_tgt0.2_seed42_20250901T172409Z.json  (+62 more)
results/runs_tuned/: single_run_tuned_v2.csv  tuned_v2_seed42_20250901T184005Z.json  tuned_v2_seed43_20250901T184011Z.json  tuned_v2_seed44_20250901T184018Z.json
results/updates/: 2025-09-ecg-mitbih.md
scripts/: run_mitbih_workflow.bat
src/sundew/: __init__.py  cli.py  config.py  config.pyi  config_presets.py  core.py  core.pyi  demo.py  gating.py
tests/: test_cli.py  test_cli_cover.py  test_cli_save.py  test_cli_smoke.py  test_config_presets.py  test_core_branches.py  test_invariants.py
