[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sundew-algorithms"
version = "0.1.5"
description = "Sundew Algorithm — bio-inspired, energy-aware selective activation for edge AI systems."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

authors = [
  { name = "Oluwafemi Idiakhoa", email = "oluwafemidiakhoa@gmail.com" }
]

keywords = [
  "bio-inspired", "event-driven", "energy-efficient",
  "adaptive-threshold", "edge-ai", "gating", "control"
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dependencies = []

[project.optional-dependencies]
benchmarks = [
  "numpy>=1.23,<2.0",
  "matplotlib>=3.3",
]
dev = [
  # core development / testing
  "numpy>=1.23,<2.0",
  "pytest>=8.0",
  "pytest-cov>=4.0",
  # property-based tests
  "hypothesis>=6.0",
  # static analysis & style
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "pre-commit>=3.5.0",
  "flake8>=6.0",  # <-- add flake8 for CI lint step
]

[project.urls]
Homepage = "https://github.com/oluwafemidiakhoa/sundew_algo"
Repository = "https://github.com/oluwafemidiakhoa/sundew_algo"
Issues = "https://github.com/oluwafemidiakhoa/sundew_algo/issues"
"CI Actions" = "https://github.com/oluwafemidiakhoa/sundew_algo/actions"

[project.scripts]
sundew = "sundew.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["sundew*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
  "tests/*",
  # Uncomment the following lines if you prefer to exclude CLI/demo from coverage:
  # "src/sundew/cli.py",
  # "src/sundew/demo.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 1

# Ruff linter/formatter configuration
[tool.ruff]
target-version = "py313"
line-length = 100

# Flake8 (for CI jobs that call 'flake8')
[tool.flake8]
max-line-length = 100
extend-ignore = ["E203"]
exclude = [
  ".git",
  "__pycache__",
  ".venv",
  "venv",
  ".mypy_cache",
  ".pytest_cache",
  "build",
  "dist",
]

# MyPy static typing configuration
[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
# Avoid duplicate-module errors for scripts with same names under Windows
exclude = "(?x)(^benchmarks(/|\\\\)|^adapters(/|\\\\))"
