# pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sundew-algorithms"
version = "0.1.8"
description = "Sundew Algorithm — bio-inspired, energy-aware selective activation for edge AI systems."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "Oluwafemi Idiakhoa", email = "oluwafemidiakhoa@gmail.com" }
]

keywords = [
  "bio-inspired", "event-driven", "energy-efficient",
  "adaptive-threshold", "edge-ai", "gating", "control"
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dependencies = []

[project.optional-dependencies]
benchmarks = [
  "numpy>=1.23,<2.0",
  "matplotlib>=3.3",
]
dev = [
  # core development / testing
  "numpy>=1.23,<2.0",
  "pytest>=8.0",
  "pytest-cov>=4.0",
  # property-based tests
  "hypothesis>=6.0",
  # static analysis & style
  "flake8>=7.0.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "pre-commit>=3.5.0",
]

[project.urls]
Homepage   = "https://github.com/oluwafemidiakhoa/sundew_algorithms"
Repository = "https://github.com/oluwafemidiakhoa/sundew_algorithms"
Issues     = "https://github.com/oluwafemidiakhoa/sundew_algorithms/issues"
"CI Actions" = "https://github.com/oluwafemidiakhoa/sundew_algorithms/actions"

[project.scripts]
sundew = "sundew.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["sundew*"]
exclude = ["tests*"]

# -------------------------
# Testing / Coverage config
# -------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 1

# ---------------
# Ruff (linter/formatter)
# ---------------
[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = [
  ".venv",
  ".mypy_cache",
  ".pytest_cache",
  "build",
  "dist",
  ".hypothesis",
]

[tool.ruff.lint]
# Enable import sorting and default rules
extend-select = ["I"]

# -------
# Flake8 (for CI or local use)
# -------
[tool.flake8]
max-line-length = 100
exclude = [
  ".venv",
  ".mypy_cache",
  ".pytest_cache",
  "build",
  "dist",
  ".hypothesis",
]

# -------
# MyPy
# -------
[tool.mypy]
python_version = "3.10"

# Analyze only the package source (avoid seeing files twice as 'sundew.core' and 'src.sundew.core')
files = ["src"]

# Treat 'src' as the import root
mypy_path = ["src"]
explicit_package_bases = true

# Typical ergonomics for library code
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
show_column_numbers = true

# Don’t scan caches/builds
exclude = "(^build/|^dist/|^\\.mypy_cache/)"
